# bitshares-2

./: Dockerfile
docker/: launch
libraries/chain/: CMakeLists.txt  db_block.cpp  db_init.cpp  db_notify.cpp  proposal_evaluator.cpp  proposal_object.cpp
libraries/chain/include/graphene/chain/: hardfork_visitor.hpp
libraries/chain/include/graphene/chain/protocol/: transaction.hpp  types.hpp
libraries/chain/include/graphene/chain/tnt/: cow_db_wrapper.hpp  evaluators.hpp  object.hpp  query_evaluator.hpp  sink_flow_processor.hpp  (+3 more)
libraries/chain/protocol/: transaction.cpp
libraries/chain/tnt/: connection_flow_processor.cpp  evaluators.cpp  object.cpp  query_evaluator.cpp  sink_flow_processor.cpp  tap_flow_evaluator.cpp  tap_requirement_utility.cpp
libraries/net/: node.cpp  node_impl.hxx  peer_connection.cpp
libraries/net/include/graphene/net/: node.hpp  peer_connection.hpp
libraries/plugins/: CMakeLists.txt
libraries/plugins/net_stats/: CMakeLists.txt  net_stats.cpp
libraries/plugins/net_stats/include/graphene/net_stats/: net_stats.hpp
libraries/protocol/: CMakeLists.txt  asset.cpp
libraries/protocol/custom_authorities/: restriction_predicate.hxx
libraries/protocol/include/graphene/protocol/: asset.hpp  config.hpp  operations.hpp
libraries/protocol/tnt/: lookups.cpp  operations.cpp  type_checks.hxx  types.cpp  validation.cpp
programs/witness_node/: CMakeLists.txt  main.cpp
tests/common/: database_fixture.cpp
tests/performance/: performance_tests.cpp
tests/tests/: authority_tests.cpp  custom_authority_tests.cpp  tnt_tests.cpp
(+9 files in other folders)
